chore: add pr creation

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,6 +12,9 @@ on:
 jobs:
   auto-pull-request:
     runs-on: ubuntu-latest
+    permissions:
+        contents: read
+        pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - name: auto-pull-request
